--- a/Image-Classification-Safety-Harness.ipynb
+++ b/Image-Classification-Safety-Harness.ipynb
@@ -115,7 +115,7 @@
    },
    "outputs": [],
    "source": [
-    "data_dir = 'C:/Users/82109/Desktop/Image_classification/data'  "
+    "data_dir = './'  "
    ]
   },
   {
