--- a/Image-Classification-Safety-Harness.ipynb
+++ b/Image-Classification-Safety-Harness.ipynb
@@ -158,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = cv2.imread(os.path.join('C:/Users/82109/Desktop/Image_classification/data' , 'Safe', '5042.jpg'))"
+    "img = cv2.imread(os.path.join('./' , 'Safe', '5042.jpg'))"
    ]
   },
   {
@@ -281,7 +281,7 @@
     }
    ],
    "source": [
-    "data = tf.keras.utils.image_dataset_from_directory('C:/Users/82109/Desktop/Image_classification/data')"
+    "data = tf.keras.utils.image_dataset_from_directory('./')"
    ]
   },
   {
@@ -1127,7 +1127,7 @@
     }
    ],
    "source": [
-    "img =cv2.imread(os.path.join('C:/Users/82109/Desktop/Image_classification/data' , 'Safe', '5042.jpg'))\n",
+    "img =cv2.imread(os.path.join('./' , 'Safe', '5042.jpg'))\n",
     "plt.imshow(img)\n",
     "plt.show()"
    ]
